src/test/ui/nll/issue-54556-stephaneyfx.stderr
error[E0597]: `stmt` does not live long enough
  --> $DIR/issue-54556-stephaneyfx.rs:27:22
   |
LL |     let rows = Rows(&stmt);
   |                      ^^^^ borrowed value does not live long enough
...
LL | }
   | - `stmt` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
